--- a/AegisCoreWeb/Views/Account/Login.cshtml
+++ b/AegisCoreWeb/Views/Account/Login.cshtml
@@ -33,7 +33,7 @@
                             <label asp-for="Password" class="form-label">Senha</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                                <input asp-for="Password" class="form-control" placeholder="••••••••" />
+                                <input asp-for="Password" class="form-control" placeholder="********" />
                             </div>
                             <span asp-validation-for="Password" class="text-danger small"></span>
                         </div>
@@ -51,7 +51,7 @@
                     <hr class="my-4">
                     
                     <p class="text-center mb-0">
-                        Não tem conta? 
+                        Nao tem conta? 
                         <a asp-action="Register" class="text-decoration-none">Criar conta</a>
                     </p>
                 </div>
